--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://249c548e-9833-4409-9c2f-8871fd32d63c.preview.emergentagent.com
 WDS_SOCKET_PORT=443
