--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=https://b5c55ad4-b633-42e2-8142-948fbac02198.preview.emergentagent.com
+REACT_APP_API_BASE_URL=http://127.0.0.1:8000/api
 WDS_SOCKET_PORT=443
